# house_thermostat

./: .gitignore  .gitmodules
cca/base_station/: .gitignore  base_station.kicad_pcb  base_station.pro  base_station.sch  flatcam_readme.org
cca/thermostat/: .gitignore  control_comm.sch  power.sch  relay_cool.sch  relay_emheat.sch  relay_fan.sch  relay_heat.sch  relay_heatcool.sch  thermostat.kicad_pcb  thermostat.pro  thermostat.sch
firmware/: .gitignore
firmware/base_station/: CMakeLists.txt  program.sh
firmware/base_station/src/: blink.cpp  gateway_example.cpp  struct_receive_example.cpp  struct_send_example.cpp
firmware/thermostat/: program.sh
